chore(blazingCoffee): fix drawer layout height and scrollbar #104

--- a/sample-applications/blazing-coffee/BlazingCoffee/Client/Theme/main.scss
+++ b/sample-applications/blazing-coffee/BlazingCoffee/Client/Theme/main.scss
@@ -83,3 +83,8 @@ a.k-link.k-state-selected {
     }
 }
 
+html, body, app {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
